# craftaxlm

./: .gitignore  CITATION.cff  README.md  pyproject.toml  setup.py  test.py
craftaxlm/: __init__.py  classic.py  craftax.py  recording.py  shared.py
craftaxlm/classic/: __init__.py  aci.py  metadata.py  state.py
craftaxlm/full/: aci.py  state.py
craftaxlm/src/: classic.py  craftax.py  full.py  shared.py
craftaxlm/src/classic/: aci.py  state.py
craftaxlm/src/full/: aci.py  metadata.py  state.py
tests/: hello_world.py
