[tool.poetry]
name = "craftax-lm-agent"
version = "0.1.0"
description = ""
authors = ["Josh Purtell <jmvpurtell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.30"
craftax = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
