[project]
name = "craftaxlm"
version = "0.0.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.31",
    "craftax>=1.4.3",
    "ruff>=0.6.1",
    "build>=1.2.1",
    "twine>=5.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
