[project]
name = "craftaxlm"
version = "0.0.22"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.31",
    "craftax>=1.4.3",
    "ruff>=0.6.1",
    "build>=1.2.1",
    "twine>=5.1.1",
    "tqdm>=4.67.1",
]
license = {text = "MIT"}
authors = [
    {name = "Josh Purtell", email = "jmvpurtell@gmail.com"}
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

